update user route
